# nonet

./: Cargo.toml  README.md
docs/: index.html
docs/pkg/: nonet_web.d.ts  nonet_web.js  nonet_web_bg.wasm  nonet_web_bg.wasm.d.ts  package.json
src/: generator.rs  main.rs  render.rs  rng.rs  solver.rs  tui.rs
web/: Cargo.toml
web/src/: board.rs  lib.rs
